<resources>
    <string name="app_name">MHW Companion</string>
    <string name="network_connectivity_indicator_text">No network connection</string>
    <string name="sync_database_menu_option_text">Sync Game Data</string>
    <string name="about_menu_option_text">About</string>
    <string name="sync_database_success_toast_text">Sync game data completed!</string>
    <string name="sync_database_fail_toast_text">Sync failed, please check connectivity!</string>
    <string name="event_nav_button_text">Events</string>
    <string name="monster_nav_button_text">Monsters</string>
    <string name="skill_nav_button_text">Skills</string>
    <string name="ailment_nav_button_text">Ailments</string>
    <string name="armor_nav_button_text">Armors</string>
    <string name="weapon_nav_button_text">Weapons</string>
    <string name="armor_list_screen_title_text">Armor Set</string>
    <string name="monster_detail_location_label">Locations: </string>
    <string name="rank_indicator_master">Master</string>
    <string name="rank_indicator_high">High</string>
    <string name="rank_indicator_low">Low</string>
    <string name="armor_piece_helm">head</string>
    <string name="armor_piece_mail">chest</string>
    <string name="armor_piece_arm">gloves</string>
    <string name="armor_piece_waist">waist</string>
    <string name="armor_piece_leg">legs</string>
    <string name="armor_detail_no_armor_set_text">No Armor Piece</string>
    <string name="armor_detail_armorlist_label">Armor List</string>
    <string name="armor_detail_skill_summary_label">Skill Summary</string>
    <string name="armor_detail_set_skill_label">Set Skill</string>
    <string name="armor_detail_no_set_skill_text">No set skills</string>
    <string name="armor_detail_set_rarity_label">Rare</string>
    <string name="armor_detail_total_defence_label">Physical Defence</string>
    <string name="armor_detail_thunder_defence_label">Thunder Resistance</string>
    <string name="armor_detail_fire_defence_label">Fire Resistance</string>
    <string name="armor_detail_water_defence_label">Water Resistance</string>
    <string name="armor_detail_ice_defence_label">Ice Resistance</string>
    <string name="armor_detail_dragon_defence_label">Dragon Resistance</string>
    <string name="skill_list_title">Skills</string>
    <string name="skill_effect_label">Skill Effect</string>
    <string name="skill_level_description_label">Skill Level Description</string>
    <string name="weapon_category_screen_title_text">Weapons</string>
    <string name="weapon_list_empty_view_text">Select a weapon category</string>
    <string name="weapon_detail_empty_view_text">Select a weapon</string>
    <string name="weapon_detail_attack_label_text">Attack</string>
    <string name="weapon_detail_affinity_label_text">Affinity</string>
    <string name="weapon_detail_element_label_text">Element</string>
    <string name="weapon_detail_sharpness_label_text">Sharpness</string>
    <string name="weapon_detail_slot_label_text">Slot</string>
    <string name="weapon_detail_shelling_label_text">Shelling</string>
    <string name="weapon_detail_phial_type_label_text">Phial</string>
    <string name="weapon_detail_kinsect_bonus_label_text">Kinsect Bonus</string>
    <string name="weapon_detail_deviation_label_text">Deviation</string>
    <string name="weapon_detail_element_none_text">None</string>
    <string name="weapon_detail_ammo_type_label_text">Ammo</string>
    <string name="weapon_detail_ammo_Lv1_label_text">Lv.1</string>
    <string name="weapon_detail_ammo_Lv2_label_text">Lv.2</string>
    <string name="weapon_detail_ammo_Lv3_label_text">Lv.3</string>
    <string name="weapon_detail_coating_label_text">Coating</string>
    <string name="ailment_screen_title_text">Ailments</string>
    <string name="event_screen_title_text">Event Quests</string>
    <string name="event_requirements_label_text">Requirements:</string>
    <string name="event_conditions_label_text">Conditions:</string>
    <string name="event_location_label_text">Location:</string>
    <string name="event_time_available_label_text">Available:</string>
    <string name="event_loading_indicator_text">Fetching event data...</string>
    <string name="dialog_header_text">MHW Companion</string>
    <string name="dialog_content_version_label_text">Version</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="back_fab_button_content_description">Back to previous page</string>
    <string name="search_fab_button_content_description">Search</string>
</resources>
