<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#09C"
    android:padding="@dimen/widget_margin">

    <ImageView
        android:src="@drawable/widget_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"/>

    <ImageView
        android:src="@drawable/palico_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:scaleType="fitXY"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_widget_event_nav_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:background="@drawable/label_title_text_background"
            android:text="@string/event_nav_button_text"
            style="@style/NavButtonTextStyle"/>

        <TextView
            android:id="@+id/tv_widget_monster_nav_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:background="@drawable/label_title_text_background"
            android:text="@string/monster_nav_button_text"
            style="@style/NavButtonTextStyle"/>

        <TextView
            android:id="@+id/tv_widget_armor_nav_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:background="@drawable/label_title_text_background"
            android:text="@string/armor_nav_button_text"
            style="@style/NavButtonTextStyle"/>

        <TextView
            android:id="@+id/tv_widget_weapon_nav_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:background="@drawable/label_title_text_background"
            android:text="@string/weapon_nav_button_text"
            style="@style/NavButtonTextStyle"/>

        <TextView
            android:id="@+id/tv_widget_skill_nav_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:background="@drawable/label_title_text_background"
            android:text="@string/skill_nav_button_text"
            style="@style/NavButtonTextStyle"/>

        <TextView
            android:id="@+id/tv_widget_ailment_nav_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:background="@drawable/label_title_text_background"
            android:text="@string/ailment_nav_button_text"
            style="@style/NavButtonTextStyle"/>

    </LinearLayout>

</FrameLayout>