<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:padding="4dp"
    android:background="@color/navButtonBackgroundColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <TextView
            android:id="@+id/tv_event_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="When Blue Dust Surpasses Red Lust"
            style="@style/EventQuestNameTextStyle"/>

        <TextView
            android:id="@+id/tv_event_rank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            tools:text="9"
            style="@style/EventQuestNameTextStyle"
            android:textColor="@color/colorWhite"/>

        <ImageView
            android:contentDescription="@null"
            android:src="@drawable/quest_rank_star_icon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:scaleType="fitXY"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_event_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Face off against the queen regent, Arch-tempered Lunastra! Take her down to obtain materials necessary to forge the Lunastra γ armor set and Sakura layered armor!"
        style="@style/EventQuestDescriptionTextStyle"
        android:textStyle="normal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_location_label_text"
            style="@style/EventQuestOtherTextStyle"/>

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            tools:text="Elder's Recess"
            style="@style/EventQuestOtherTextStyle"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_requirements_label_text"
            style="@style/EventQuestOtherTextStyle"/>

        <TextView
            android:id="@+id/tv_requirements"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            tools:text="HR 50 or higher"
            style="@style/EventQuestOtherTextStyle"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_conditions_label_text"
            style="@style/EventQuestOtherTextStyle"/>

        <TextView
            android:id="@+id/tv_conditions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            tools:text="Slay Lunastra"
            style="@style/EventQuestOtherTextStyle"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_time_available_label_text"
            style="@style/EventQuestOtherTextStyle"/>

        <TextView
            android:id="@+id/tv_available"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            tools:text="2019/11/21 16:00 ~ 2019/11/28 15:59"
            style="@style/EventQuestOtherTextStyle"/>

    </LinearLayout>

</LinearLayout>