<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/main_screen_background"
        android:scaleType="fitXY" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/main_screen_scollView_margin_top"
        android:layout_marginBottom="@dimen/main_screen_scollView_margin_bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/nav_button_events"
                android:layout_width="@dimen/main_screen_nav_button_width"
                android:layout_height="@dimen/main_screen_nav_button_height"
                android:layout_gravity="center"
                android:elevation="16dp"
                android:layout_marginTop="@dimen/main_screen_nav_button_margin"
                android:background="@color/navButtonBackgroundColor">

                <ImageView
                    android:src="@drawable/nav_button_frame_left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:layout_gravity="left"/>

                <ImageView
                    android:src="@drawable/nav_button_frame_right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:layout_gravity="right"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/event_nav_button_text"
                    style="@style/NavButtonTextStyle"/>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/nav_button_monsters"
                android:layout_width="@dimen/main_screen_nav_button_width"
                android:layout_height="@dimen/main_screen_nav_button_height"
                android:layout_gravity="center"
                android:elevation="16dp"
                android:layout_marginTop="@dimen/main_screen_nav_button_margin"
                android:background="@color/navButtonBackgroundColor">

                <ImageView
                    android:src="@drawable/nav_button_frame_left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:layout_gravity="left"/>

                <ImageView
                    android:src="@drawable/nav_button_frame_right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:layout_gravity="right"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/monster_nav_button_text"
                    style="@style/NavButtonTextStyle"/>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/nav_button_armor"
                android:layout_width="@dimen/main_screen_nav_button_width"
                android:layout_height="@dimen/main_screen_nav_button_height"
                android:layout_gravity="center"
                android:elevation="16dp"
                android:layout_marginTop="@dimen/main_screen_nav_button_margin"
                android:background="@color/navButtonBackgroundColor">

                <ImageView
                    android:src="@drawable/nav_button_frame_left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:layout_gravity="left"/>

                <ImageView
                    android:src="@drawable/nav_button_frame_right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:layout_gravity="right"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/armor_nav_button_text"
                    style="@style/NavButtonTextStyle"/>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/nav_button_weapon"
                android:layout_width="@dimen/main_screen_nav_button_width"
                android:layout_height="@dimen/main_screen_nav_button_height"
                android:layout_gravity="center"
                android:elevation="16dp"
                android:layout_marginTop="@dimen/main_screen_nav_button_margin"
                android:background="@color/navButtonBackgroundColor">

                <ImageView
                    android:src="@drawable/nav_button_frame_left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:layout_gravity="left"/>

                <ImageView
                    android:src="@drawable/nav_button_frame_right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:layout_gravity="right"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/weapon_nav_button_text"
                    style="@style/NavButtonTextStyle"/>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/nav_button_skills"
                android:layout_width="@dimen/main_screen_nav_button_width"
                android:layout_height="@dimen/main_screen_nav_button_height"
                android:layout_gravity="center"
                android:elevation="16dp"
                android:layout_marginTop="@dimen/main_screen_nav_button_margin"
                android:background="@color/navButtonBackgroundColor">

                <ImageView
                    android:src="@drawable/nav_button_frame_left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:layout_gravity="left"/>

                <ImageView
                    android:src="@drawable/nav_button_frame_right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:layout_gravity="right"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/skill_nav_button_text"
                    style="@style/NavButtonTextStyle"/>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/nav_button_ailments"
                android:layout_width="@dimen/main_screen_nav_button_width"
                android:layout_height="@dimen/main_screen_nav_button_height"
                android:layout_gravity="center"
                android:elevation="16dp"
                android:layout_marginTop="@dimen/main_screen_nav_button_margin"
                android:background="@color/navButtonBackgroundColor">

                <ImageView
                    android:src="@drawable/nav_button_frame_left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:layout_gravity="left"/>

                <ImageView
                    android:src="@drawable/nav_button_frame_right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:layout_gravity="right"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/ailment_nav_button_text"
                    style="@style/NavButtonTextStyle"/>

            </FrameLayout>

        </LinearLayout>

    </ScrollView>

</FrameLayout>