<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/skill_list_root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/skill_list_background"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@drawable/label_title_text_background"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/monster_list_screen_title_text_margin_top"
                android:text="@string/skill_list_title"
                style="@style/NavButtonTextStyle"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_skill_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="16dp"
                android:scrollbars="vertical"
                android:scrollbarStyle="insideOverlay"
                android:scrollbarSize="@dimen/recyclerview_scrollbar_size"
                android:scrollbarThumbVertical="@color/colorWhite"
                android:scrollbarDefaultDelayBeforeFade="3000"/>

        </LinearLayout>

    </FrameLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/skill_detail_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:background="@color/skillListBottomSheetBackgroundColor"
        app:layout_behavior="@string/bottom_sheet_behavior"
        app:behavior_hideable="true"
        app:behavior_peekHeight="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:descendantFocusability="blocksDescendants">

            <TextView
                android:id="@+id/tv_single_skill_effect_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/skill_list_bottom_sheet_label_title_text_background"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/skill_effect_label"
                style="@style/SkillDescriptionLabelTextStyle"/>

            <TextView
                android:id="@+id/tv_single_skill_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="4dp"
                android:layout_below="@id/tv_single_skill_effect_label"
                tools:text="Skill description. An aura of frost builds when your weapon is sheathed, raising attack. Wanes each melee hit or shot fired."
                style="@style/SkillDescriptionTextStyle"/>

            <TextView
                android:id="@+id/tv_single_skill_level_description_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/skill_list_bottom_sheet_label_title_text_background"
                android:layout_below="@id/tv_single_skill_description"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/skill_level_description_label"
                style="@style/SkillDescriptionLabelTextStyle"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_skill_rank_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="32dp"
                android:layout_below="@id/tv_single_skill_level_description_label"/>

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
